--- a/src/components/randomChar/randomChar.scss
+++ b/src/components/randomChar/randomChar.scss
@@ -3,6 +3,7 @@
 .randomchar {
     display: grid;
     grid-template-columns: repeat(2, 50%);
+    align-items: center;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.25);
 
     &__block {
@@ -35,6 +36,7 @@
     &__descr {
         font-size: 14px;
         line-height: 18px;
+        overflow: hidden;
     }
 
     &__btns {
@@ -69,9 +71,5 @@
         position: absolute;
         bottom: 14px;
         right: -37px;
-    }
-
-    .randomchar__descr {
-        overflow: hidden;
     }
 }
